@@ -12,4 +12,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 003 ==> AdvancedSlideShow : 215798 : Slideshow crashes when starting.
 004 ==> JPEGLossLess      : 200031 : Photo is rotated but not thumbnail.
 005 ==> PicasaWebExport   : 199145 : tags not exported to picasaweb [patch].
-006 ==> 
+006 ==> PicasaWebExport   : 215846 : PicasaWeb plugin crashes Digikam after start sending the pic [delete, KIPIPicasawebExportPlugin::PicasawebWindow::slotUploadImages] (double deletion)
+007 ==> 
